<resources>
    <string name="app_name">Blood Bag</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="find_donor">Find Donor</string>
    <string name="search_blood">Search for blood donor arround you</string>
    <string name="location">Location</string>
    <string-array name="donate_blood">
        <item>Do you want to donate blood?</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="donate_type">
        <item>Select Blood Type</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="donateBlood_type">
        <item>Select Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="blood_quantity">
        <item>Select Required Blood Amount</item>
        <item>1 bag</item>
        <item>2 bag</item>
        <item>3 bag</item>
        <item>4 bag</item>
        <item>5 bag</item>
        <item>6 bag</item>
        <item>7 bag</item>
        <item>8 bag</item>
        <item>9 bag</item>
        <item>10 bag</item>

    </string-array>
    <string-array name="blood_gender">
        <item>Select Patient Gender</item>
        <item>Kids</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>

    </string-array>
    <string-array name="patient">
        <item>Select Patient Type</item>
        <item>Normal</item>
        <item>Accident</item>
        <item>Baby Delivery</item>
        <item>Emergency</item>
        <item>Others</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="type_a_message">Type a message</string>
    <string name="select_Upazila">Select Upazila</string>
    <string name="search_upazila">Search Upazila...</string>
    <string name="select_upazila">Select Upazila</string>
    <string name="upazila_needs">Which Upazila needs blood ?</string>
    <string name="your_upazila">Select Your Upazila</string>
    <string name="select_division">Select Division</string>
    <string name="select_district">Select District</string>
</resources>