<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeActivity">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/heebo_black"
            android:text="@string/find_donor"
            android:textColor="@color/black"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:fontFamily="@font/heebo_regular"
            android:text="@string/search_blood"
            android:textSize="@dimen/_12ssp"
           />
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:hint="Select Blood Group"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_marginTop="@dimen/_10sdp"

            >

            <AutoCompleteTextView
                android:fontFamily="@font/heebo_regular"
                android:textColor="@color/black"
                android:editable="false"
                android:inputType="none"
                android:id="@+id/homeBloodGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:fontFamily="@font/heebo_regular"
            android:text="@string/location"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10sdp"
            />
        <TextView
            android:drawableEnd="@drawable/drop_down"

            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/inuput_bg"
            android:fontFamily="@font/heebo_regular"
            android:hint="@string/your_upazila"
            android:importantForAutofill="no"
            android:inputType="none"
            android:maxLines="1"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="#000"
            android:textSize="@dimen/_13ssp" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/homeIndicator"
            android:visibility="gone"
            android:indeterminate="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:id="@+id/button"
            android:backgroundTint="@color/main"
            app:cornerRadius="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="Search Donor"
            android:textColor="@color/white"
            android:fontFamily="@font/heebo_regular"
            android:textSize="@dimen/_14ssp"
            android:textAllCaps="false"
            android:layout_below="@id/spinnerdonateBlood"/>


    </LinearLayout>

    <com.etebarian.meowbottomnavigation.MeowBottomNavigation
        android:id="@+id/bottomNav_home"
        app:mbn_backgroundBottomColor="@color/main_gray"
        app:mbn_countBackgroundColor="#ff6f00"
        app:mbn_circleColor="@color/main"
        app:mbn_countTextColor="#ffffff"
        app:mbn_defaultIconColor="#FFFFFF"
        app:mbn_rippleColor="#2f424242"
        app:mbn_selectedIconColor="@color/white"
        app:mbn_shadowColor="#1f212121"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</RelativeLayout>